--- a/coding.vcxproj.filters
+++ b/coding.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="1257.cpp">
+    <ClCompile Include="hdu\segment_tree\1754.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
