--- a/coding.vcxproj.filters
+++ b/coding.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="hdu\segment_tree\1394.cpp">
+    <ClCompile Include="pku\segment_tree\2528.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
