--- a/coding.vcxproj
+++ b/coding.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="pku\segment_tree\2528.cpp" />
+    <ClCompile Include="hku\segment_tree\2795.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
