--- a/coding.vcxproj
+++ b/coding.vcxproj
@@ -18,6 +18,9 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="hdu\segment_tree\2871.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <ProjectGuid>{2FCC9EF3-1EE6-424C-B0D8-0070DA1DFCDC}</ProjectGuid>
