--- a/coding.vcxproj
+++ b/coding.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="hdu\segment_tree\2871.cpp" />
+    <ClCompile Include="pku\water\2739.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
